# llama-index-readers-scrappey

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
llama_index/readers/scrappey/: __init__.py  base.py
tests/: test_readers_scrappey.py
